--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                  <div class="portfolio-item padd-15" data-category="VB.Net">
                     <div class="portfolio-item-inner shadow-dark">
                        <div class="portfolio-img">
-                          <img src="Database.png" alt="portfolio">
+                          <img src="Database.PNG" alt="portfolio">
                        </div>
                        <div class="portfolio-info">
                           <h4>Database</h4>
