--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                  <div class="portfolio-item padd-15" data-category="Webpage">
                     <div class="portfolio-item-inner shadow-dark">
                        <div class="portfolio-img">
-                          <img src="berio.png" alt="portfolio">
+                          <img src="berio.PNG" alt="portfolio">
                        </div>
                        <div class="portfolio-info">
                           <h4>Personal Webpage</h4>
@@ -325,7 +325,7 @@
                  <div class="portfolio-item padd-15" data-category="Webpage">
                     <div class="portfolio-item-inner shadow-dark">
                        <div class="portfolio-img">
-                          <img src= "Naruto.png" alt="portfolio">
+                          <img src= "Naruto.PNG" alt="portfolio">
                        </div>
                        <div class="portfolio-info">
                           <h4>Naruto</h4>
