--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                  <div class="portfolio-item padd-15" data-category="C++">
                     <div class="portfolio-item-inner shadow-dark">
                        <div class="portfolio-img">
-                          <img src="Inventorysystem.png" alt="portfolio">
+                          <img src="Inventorysystem.PNG" alt="portfolio">
                        </div>
                        <div class="portfolio-info">
                           <h4>Inventory System using Linked List</h4>
@@ -389,7 +389,7 @@
                  <div class="portfolio-item padd-15" data-category="C++">
                     <div class="portfolio-item-inner shadow-dark">
                        <div class="portfolio-img">
-                          <img src="Login.png" alt="portfolio">
+                          <img src="Login.PNG" alt="portfolio">
                        </div>
                        <div class="portfolio-info">
                           <h4>Login and Register</h4>
@@ -405,7 +405,7 @@
                 <div class="portfolio-item padd-15" data-category="C++">
                     <div class="portfolio-item-inner shadow-dark">
                        <div class="portfolio-img">
-                          <img src="Calculator.png" alt="portfolio">
+                          <img src="Calculator.PNG" alt="portfolio">
                        </div>
                        <div class="portfolio-info">
                           <h4>Calculator Using OOP</h4>
